changes from arteria team - related to home icon

--- a/uikit/src/main/res-components/groups/layout/activity_cometchat_group_detail.xml
+++ b/uikit/src/main/res-components/groups/layout/activity_cometchat_group_detail.xml
@@ -5,13 +5,34 @@
     android:orientation="vertical"
     android:layout_height="match_parent"
     android:scrollbars="none">
-
-    <com.google.android.material.appbar.MaterialToolbar
-        android:id="@+id/groupDetailToolbar"
+    <RelativeLayout
+        android:id="@+id/topBar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:navigationIcon="@drawable/ic_back_arrow_selected"
-        app:title="@string/details" />
+        android:layout_height="wrap_content">
+
+        <com.google.android.material.appbar.MaterialToolbar
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
+            android:id="@+id/groupDetailToolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:navigationIcon="@drawable/ic_back_arrow_selected"
+            app:title="@string/details"/>
+
+        <LinearLayout
+            android:layout_marginRight="10dp"
+            android:layout_centerVertical="true"
+            android:id="@+id/toolbar_controls"
+            android:layout_alignParentEnd="true"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <include layout="@layout/layout_toolbar"/>
+        </LinearLayout>
+    </RelativeLayout>
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -77,31 +98,32 @@
 
             <RelativeLayout
                 android:id="@+id/rlAdminView"
-                android:clickable="true"
-                android:foreground="?attr/selectableItemBackground"
-                android:layout_below="@id/user_container"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_below="@id/user_container"
+                android:clickable="true"
+                android:foreground="?attr/selectableItemBackground">
+
                 <TextView
-                    android:text="@string/administrators"
-                    android:textSize="18sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="16dp"
                     android:layout_marginBottom="16dp"
-                    android:layout_centerVertical="true"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:text="@string/administrators"
+                    android:textSize="18sp" />
 
                 <TextView
                     android:id="@+id/tv_admin_count"
-                    android:gravity="center"
-                    android:drawablePadding="8dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
                     android:layout_marginEnd="16dp"
                     android:drawableEnd="@drawable/ic_arrow_right"
-                    android:layout_centerVertical="true"
-                    android:layout_alignParentEnd="true"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:drawablePadding="8dp"
+                    android:gravity="center" />
             </RelativeLayout>
             <TextView
                 android:id="@+id/tv_seperator_admin"
