--- a/uikit/src/main/res-components/groups/layout/fragment_cometchat_create_group.xml
+++ b/uikit/src/main/res-components/groups/layout/fragment_cometchat_create_group.xml
@@ -12,19 +12,18 @@
         android:layout_height="wrap_content">
 
 
-
         <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/tvDes1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:id="@+id/tvDes1"
             android:layout_marginStart="16dp"
-            android:textColor="@color/primaryTextColor"
+            android:layout_marginTop="16dp"
             android:padding="4dp"
             android:text="@string/create_group"
+            android:textColor="@color/primaryTextColor"
             android:textSize="32sp"
             android:textStyle="bold" />
-
+        <include layout="@layout/layout_toolbar"/>
         <com.google.android.material.textview.MaterialTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
