--- a/uikit/src/main/res-components/chats/layout/fragment_cometchat_conversationlist.xml
+++ b/uikit/src/main/res-components/chats/layout/fragment_cometchat_conversationlist.xml
@@ -1,105 +1,115 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:focusable="true"
     android:focusableInTouchMode="true"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     tools:context="com.cometchat.pro.uikit.ui_components.chats.CometChatConversationList">
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:focusableInTouchMode="true">
+        android:focusableInTouchMode="true"
+        android:orientation="vertical">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-            <TextView
-                android:text="@string/conversation_title"
-                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-                android:visibility="gone"
-                tools:visibility="visible"
-                android:textStyle="bold"
-                android:textColor="@color/primaryTextColor"
-                android:id="@+id/tv_title"
-                android:layout_margin="16dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
 
-            <ImageView
-                android:id="@+id/start_conversation"
+            <TextView
+                android:id="@+id/tv_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:tint="@color/colorPrimary"
-                android:layout_marginEnd="16dp"
-                android:layout_marginRight="16dp"
-                android:layout_marginBottom="16dp"
-                android:clickable="true"
-                android:foreground="?attr/selectableItemBackground"
-                android:src="@drawable/ic_create" />
+                android:layout_margin="16dp"
+                android:text="@string/conversation_title"
+                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+                android:textColor="@color/primaryTextColor"
+                android:textStyle="bold"
+                android:visibility="gone"
+                tools:visibility="visible" />
+
+            <include
+                android:id="@+id/home"
+                layout="@layout/layout_toolbar" />
+
+            <!--            <ImageView-->
+            <!--                android:id="@+id/start_conversation"-->
+            <!--                android:layout_width="wrap_content"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:layout_alignParentRight="true"-->
+            <!--                android:layout_marginStart="16dp"-->
+            <!--                android:layout_marginTop="16dp"-->
+            <!--                android:layout_marginEnd="16dp"-->
+            <!--                android:layout_marginRight="16dp"-->
+            <!--                android:layout_marginBottom="16dp"-->
+            <!--                android:clickable="true"-->
+            <!--                android:foreground="?attr/selectableItemBackground"-->
+            <!--                android:src="@drawable/ic_create"-->
+            <!--                android:tint="@color/colorPrimary" />-->
         </RelativeLayout>
+
         <RelativeLayout
             android:id="@+id/rl_search_box"
-            android:layout_marginBottom="8dp"
-            android:visibility="gone"
-            tools:visibility="visible"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_marginBottom="8dp"
+            android:visibility="gone"
+            tools:visibility="visible">
+
             <EditText
                 android:id="@+id/search_bar"
-                android:hint="@string/search"
-                android:imeOptions="actionSearch"
-                android:maxLines="1"
-                android:inputType="text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/search_box"
                 android:drawableStart="@drawable/ic_search"
                 android:drawablePadding="5dp"
-                android:padding="8dp"
-                android:background="@drawable/search_box"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:hint="@string/search"
+                android:imeOptions="actionSearch"
+                android:inputType="text"
+                android:maxLines="1"
+                android:padding="8dp" />
 
         </RelativeLayout>
 
         <LinearLayout
-            android:alpha="0.6"
-            tools:visibility="visible"
-            android:visibility="gone"
             android:id="@+id/no_conversation_view"
-            android:layout_marginTop="24dp"
-            android:layout_gravity="center"
-            android:orientation="vertical"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="24dp"
+            android:alpha="0.6"
+            android:orientation="vertical"
+            android:visibility="gone"
+            tools:visibility="visible">
+
             <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:src="@drawable/no_conversation"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:src="@drawable/no_conversation" />
+
             <TextView
-                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                android:text="@string/no_conversations"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:text="@string/no_conversations"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
         </LinearLayout>
+
         <com.cometchat.pro.uikit.ui_components.shared.cometchatConversations.CometChatConversations
             android:id="@+id/rv_conversation_list"
             android:layout_width="match_parent"
-            tools:listitem="@layout/cometchat_conversation_list_row"
+            android:layout_height="match_parent"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            android:layout_height="match_parent"/>
+            tools:listitem="@layout/cometchat_conversation_list_row" />
 
     </LinearLayout>
 
-    <include layout="@layout/conversation_shimmer"/>
+    <include layout="@layout/conversation_shimmer" />
 
 
 </RelativeLayout>
