--- a/uikit/src/main/res-components/groups/layout/fragment_cometchat_admin_moderator_list.xml
+++ b/uikit/src/main/res-components/groups/layout/fragment_cometchat_admin_moderator_list.xml
@@ -6,13 +6,40 @@
     android:layout_height="match_parent"
     tools:context="com.cometchat.pro.uikit.ui_components.groups.admin_moderator_list.CometChatAdminModeratorList">
 
-    <com.google.android.material.appbar.MaterialToolbar
-        app:title="Administrators"
+<!--    <com.google.android.material.appbar.MaterialToolbar-->
+<!--        app:title="Administrators"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:id="@+id/admin_toolbar"-->
+<!--        android:layout_height="wrap_content"/>-->
+
+
+    <RelativeLayout
+        android:id="@+id/topBar"
         android:layout_width="match_parent"
-        android:id="@+id/admin_toolbar"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content">
 
+        <com.google.android.material.appbar.MaterialToolbar
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
+            app:title="Administrators"
+            android:layout_width="match_parent"
+            android:id="@+id/admin_toolbar"
+            android:layout_height="wrap_content" />
 
+        <LinearLayout
+            android:layout_marginRight="10dp"
+            android:layout_centerVertical="true"
+            android:id="@+id/toolbar_controls"
+            android:layout_alignParentEnd="true"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <include layout="@layout/layout_toolbar"/>
+        </LinearLayout>
+    </RelativeLayout>
 
     <RelativeLayout
         android:id="@+id/rl_add_Admin"
