--- a/uikit/src/main/res-components/userprofile/layout/fragment_cometchat_user_profile.xml
+++ b/uikit/src/main/res-components/userprofile/layout/fragment_cometchat_user_profile.xml
@@ -14,14 +14,35 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:padding="16dp">
-        <TextView
-            android:id="@+id/tv_title"
-            android:textColor="@color/primaryTextColor"
-            android:text="@string/more"
-            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-            android:textStyle="bold"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+<!--        <TextView-->
+<!--            android:id="@+id/tv_title"-->
+<!--            android:textColor="@color/primaryTextColor"-->
+<!--            android:text="@string/more"-->
+<!--            android:textAppearance="@style/TextAppearance.AppCompat.Display1"-->
+<!--            android:textStyle="bold"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"/>-->
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="16dp">
+
+            <TextView
+                android:id="@+id/tv_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/more"
+                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+                android:textColor="@color/primaryTextColor"
+                android:textStyle="bold" />
+
+            <include
+                android:id="@+id/home"
+                layout="@layout/layout_toolbar" />
+        </LinearLayout>
+
         <RelativeLayout
             android:id="@+id/user_container"
             android:layout_marginTop="20dp"
