--- a/uikit/src/main/res-components/users/layout/fragment_cometchat_userlist.xml
+++ b/uikit/src/main/res-components/users/layout/fragment_cometchat_userlist.xml
@@ -15,6 +15,11 @@
         android:layout_margin="16dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
+
+    <include
+        android:id="@+id/home"
+        layout="@layout/layout_toolbar"/>
+
     <RelativeLayout
         android:id="@+id/rl_search_box"
         android:visibility="gone"
