--- a/uikit/src/main/res-components/calls/layout/fragment_cometchat_calls.xml
+++ b/uikit/src/main/res-components/calls/layout/fragment_cometchat_calls.xml
@@ -14,14 +14,14 @@
             android:text="@string/calls"
             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
             android:textStyle="bold"
-            android:textColor="@color/primaryTextColor"
+            android:textColor="@color/primaryTextColoruikit"
             android:id="@+id/tv_title"
             android:layout_margin="16dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <ImageView
             android:id="@+id/add_phone_iv"
-            android:tint="@color/colorPrimary"
+            android:tint="@color/colorPrimaryuikit"
             android:layout_margin="16dp"
             android:layout_alignParentEnd="true"
             android:src="@drawable/ic_create"
@@ -38,8 +38,8 @@
         app:tabGravity="fill"
         app:tabIndicatorGravity="bottom"
         app:tabIndicatorFullWidth="false"
-        app:tabTextColor="@color/primaryTextColor"
-        app:tabSelectedTextColor="@color/textColorWhite"
+        app:tabTextColor="@color/primaryTextColoruikit"
+        app:tabSelectedTextColor="@color/textColorWhiteuikit"
         app:tabMode="fixed">
     </com.google.android.material.tabs.TabLayout>
     <androidx.viewpager.widget.ViewPager
